Changes to building page. Issue with bottom margin. Some extra padding in  some places.

--- a/students/static/students/building/building-roomservice.css
+++ b/students/static/students/building/building-roomservice.css
@@ -183,10 +183,11 @@ body, html {
 }
 
 .right-content{
-  float:left;
-  height: 100%;
-  overflow: hidden;
-  background-color: #efefef;
+    float:left;
+    height: 100%;
+    overflow: hidden;
+    background-color: #efefef;
+    padding-bottom: 20px;
 }
 
 @media (max-width: 1200px){
@@ -220,7 +221,7 @@ body, html {
   font-weight: 300;
   letter-spacing: 1.2px;
   line-height: 1.7;
-  font-size: 1.5rem;
+  font-size: 1.75rem;
 }
 /*.floorplans{
    position: inherit;
