--- a/students/static/students/sidebar/sidebar-roomservice.css
+++ b/students/static/students/sidebar/sidebar-roomservice.css
@@ -3,9 +3,13 @@
 }
 
 body, html, .row-offcanvas {
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: hidden;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+.row-offcanvas {
+    margin-bottom: 49px;
 }
 
 @media screen and (max-width: 765px) {
